--- a/CitrusStylesSE.css
+++ b/CitrusStylesSE.css
@@ -5091,8 +5091,9 @@ ol.citrusStylesSE-list.citrusStylesSE-list--inline:not(.citrusStylesSE-list--uns
 .citrusStylesSE-button.citrusStylesSE-button--common{
   font-family: 'PetcoCircular-Bold',arial!important;
   margin-top: 30px;
-  width: 211px;
-  height: 56px; 
+  padding: 18px 39px 13px 39px;
+  /* width: 211px;
+  height: 56px;  */
   text-transform: uppercase;
   font-weight: 700;
   border: none;
@@ -5119,17 +5120,23 @@ ol.citrusStylesSE-list.citrusStylesSE-list--inline:not(.citrusStylesSE-list--uns
 .citrusStylesSE__Hero{
   margin-bottom: 4.0625em;
 }
-.citrusStylesSE__Hero_left--content{
+.citrusStylesSE__Hero_left--content {
+  /* 
+  max-width: 100%; */
+  max-width: 58%;
   margin-left: 10%;
+  margin-right: 10%;
 }
 .citrusStylesSE__Hero_left--content-logo {
   margin: 30px 0 35px 0;
   width: 216px;
   max-width: 100%;
 }
-.citrusStylesSE__Hero .citrusStylesSE__text--heading{
+.citrusStylesSE__Hero .citrusStylesSE__text--heading {
   font-size: 2.1875em;
-  line-height: 0em;
+  line-height: 35px;
+  margin-top: 5px;
+  margin-bottom: 15px;
 }
 .citrusStylesSE__Hero .citrusStylesSE__text--subHead {
   margin: 10px 0 0 0;
@@ -5262,6 +5269,22 @@ ol.citrusStylesSE-list.citrusStylesSE-list--inline:not(.citrusStylesSE-list--uns
 }
 /* Hide all scrollbar */
 /*========= responsive styles ===========*/
+@media (max-width: 1250px) {
+  .citrusStylesSE__Hero_left--content{
+    max-width: 75%;
+  }
+  .citrusStylesSE__Hero_right--content-product{
+    left: -15%;
+  }
+}
+@media (max-width: 1100px) {
+  .citrusStylesSE__Hero_left--content-logo {
+    margin: 30px 0 20px 0;
+}
+  .citrusStylesSE__Hero .citrusStylesSE__text--heading{
+    font-size: 25px;
+  }
+}
 @media (max-width: 921px) {
   /* hero max-921 */
 .citrusStylesSE__Hero  .citrusStylesSE-grid{
@@ -5282,8 +5305,7 @@ ol.citrusStylesSE-list.citrusStylesSE-list--inline:not(.citrusStylesSE-list--uns
   margin: auto;  
 }
 .citrusStylesSE__Hero_left--content {
-  margin-left: 0px;
-  margin: 40px auto;
+  margin: 40px 10%;
 }
 /* hero max-921 e*/
 
